welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: value len
  while(nums(i)!= lookingFor && i<(len(nums)-1))
                                   ^